--- a/index-menu.html
+++ b/index-menu.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Hello MUI</title>
+		<title>TopPhper</title>
 		<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -39,20 +39,20 @@
 				</p>
 				
 			</div>
-			<div class="title" style="margin-bottom: 25px;">菜单</div>
+			<div class="title" style="margin-bottom: 25px;">单页页面</div>
 			<ul class="mui-table-view mui-table-view-chevron mui-table-view-inverted" style="color: #ddd;">
 				<li class="mui-table-view-cell">
-					<a class="mui-navigate-right" href="examples/tableviews-with-swipe.html">
+					<a class="mui-navigate-right" page-id ="47" >
 						ABOUT ME
 					</a>
 				</li>
 				<li class="mui-table-view-cell">
-					<a class="mui-navigate-right" href="examples/pullrefresh.html">
+					<a class="mui-navigate-right" page-id="973" >
 						我的书单
 					</a>
 				</li>
 				<li class="mui-table-view-cell">
-					<a class="mui-navigate-right"  href="examples/offcanvas-drag-left.html">
+					<a class="mui-navigate-right"  page-id = "984">
 						To-Do-List
 					</a>
 				</li>
@@ -76,6 +76,7 @@
 			mui('.mui-table-view').on('tap', 'a', function() {
 				var id = this.getAttribute("href");
 				var type = this.getAttribute("open-type");
+				var pageId = this.getAttribute("page-id");
 				if(type=="common"){
 					mui.openWindow({
 						id: id,
@@ -85,7 +86,8 @@
 						}
 					});
 				}else{
-					var href = "templete/page.html";
+					
+					var href = "templete/page.html?pageId="+pageId;
 					var title = this.innerText;
 					if(false){
 						var template = plus.webview.getWebviewById("pullrefresh-main");
